--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # Server Configuration
-PORT=3000
+PORT=8080
+# Optional alternate port var for some platforms
+# WEB_PORT=8080
 NODE_ENV=development
 
 # File Storage
