--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
     container_name: svgconvert-server
     restart: unless-stopped
     ports:
-      - "3000:3000"
+      - "8080:8080"
     environment:
       - NODE_ENV=production
-      - PORT=3000
+      - PORT=8080
       - TEMP_DIR=/app/temp
       - MAX_FILE_SIZE=20971520
       - CLEANUP_INTERVAL_MINUTES=5
@@ -21,7 +21,7 @@ services:
       # Optional: mount temp directory to host for debugging
       # - ./temp:/app/temp
     healthcheck:
-      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
+      test: ["CMD", "node", "-e", "const port = process.env.PORT || process.env.WEB_PORT || 8080; require('http').get(`http://localhost:${port}/health`, (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
       interval: 30s
       timeout: 3s
       retries: 3
